--- a/src/main/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -20,6 +20,7 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "@com_google_api_api_common",
         "@com_google_api_gax_java//gax",
+        "@com_google_api_grpc_proto_google_common_protos",
         "@google_java_format_all_deps//jar",
     ],
 )
