--- a/gax-java/.github/workflows/ci.yaml
+++ b/gax-java/.github/workflows/ci.yaml
@@ -49,10 +49,18 @@ jobs:
 
   linkage-monitor:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [8, 11]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: 8
+          java-version: ${{ matrix.java }}
       - run: java -version
-      - run: .kokoro/linkage-monitor.sh
+      - name: Build and install local Maven repository
+        run: ./gradlew build publishToMavenLocal -x test -x signMavenJavaPublication
+      - name: Check dependency conflicts with the latest Libraries BOM
+        uses: GoogleCloudPlatform/cloud-opensource-java/linkage-monitor@v1-linkagemonitor
+      - name: Check dependency conflicts in the gax artifacts
+        run: ./gradlew checkJavaLinkage
