--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [7, 8, 11]
+        java: [8, 11]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
