--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -1,8 +1,8 @@
 load(
     "@com_google_googleapis_imports//:imports.bzl",
-    java_gapic_assembly_gradle_pkg = "java_gapic_assembly_gradle_pkg2",
-    java_gapic_library = "java_gapic_library2",
-    java_gapic_test = "java_gapic_test2",
+    "java_gapic_assembly_gradle_pkg",
+    "java_gapic_library",
+    "java_gapic_test",
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
