--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -3,6 +3,8 @@ load(
     "java_gapic_assembly_gradle_pkg",
     "java_gapic_library",
     "java_gapic_test",
+    "java_grpc_library",
+    "java_proto_library",
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
@@ -19,7 +21,8 @@ package(default_visibility = ["//visibility:public"])
 INTEGRATION_TEST_LIBRARIES = [
     "asset",  # Basic case.
     "credentials",  # Check that the capital name edge case is handled.
-    "kms",  # Mixins.
+    "iam",  # Mixin-only special-case API can build on its own.
+    "kms",  # Mixins, with an override in the proto file.
     "logging",  # Java package remapping in gapic.yaml.
     "redis",  # Has a gapic.yaml.
     "library",  # No gRPC service config.
@@ -29,6 +32,7 @@ INTEGRATION_TEST_LIBRARIES = [
 API_GAPIC_TARGETS = {
     "asset": "@com_google_googleapis//google/cloud/asset/v1:asset_java_gapic",
     "credentials": "@com_google_googleapis//google/iam/credentials/v1:credentials_java_gapic",
+    "iam": ":iam_java_gapic",  # Googleapis' LRO does not have a Java Gapic.
     "kms": ":kms_java_gapic",  # Local target because mixins are not rolled out yet.
     "logging": "@com_google_googleapis//google/logging/v2:logging_java_gapic",
     "redis": "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_gapic",
@@ -155,19 +159,94 @@ java_gapic_assembly_gradle_pkg(
     ],
 )
 
-# KMS (for mixins).
+# Operations (for a standalone mixed-in API).
 java_gapic_library(
-    name = "kms_java_gapic",
-    srcs = ["@com_google_googleapis//google/cloud/kms/v1:kms_proto_with_info"],
-    grpc_service_config = "@com_google_googleapis//google/cloud/kms/v1:cloudkms_grpc_service_config.json",
-    # For the IAM mixin.
-    service_yaml = "cloudkms_test_mixins_v1.yaml",
+    name = "iam_java_gapic",
+    srcs = ["@com_google_googleapis//google/iam/v1:iam_proto_with_info"],
+    grpc_service_config = "iam_grpc_service_config.json",
     test_deps = [
-        "@com_google_googleapis//google/cloud/kms/v1:kms_java_grpc",
         "@com_google_googleapis//google/iam/v1:iam_java_grpc",
     ],
     deps = [
-        "@com_google_googleapis//google/cloud/kms/v1:kms_java_proto",
+        "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
+
+java_gapic_test(
+    name = "iam_java_gapic_test_suite",
+    test_classes = [
+        "com.google.iam.v1.IAMPolicyClientTest",
+    ],
+    runtime_deps = ["iam_java_gapic_test"],
+)
+
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-iam-java",
+    deps = [
+        ":iam_java_gapic",
+        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
+        "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
+
+# KMS (for mixins).
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")
+
+proto_library(
+    name = "kms_proto",
+    srcs = [
+        "apis/kms/v1/resources.proto",
+        "apis/kms/v1/service.proto",
+    ],
+    deps = [
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/iam/v1:iam_policy_proto",
+        "@com_google_googleapis//google/iam/v1:policy_proto",
+        "@com_google_protobuf//:duration_proto",
+        "@com_google_protobuf//:field_mask_proto",
+        "@com_google_protobuf//:struct_proto",
+        "@com_google_protobuf//:timestamp_proto",
+        "@com_google_protobuf//:wrappers_proto",
+    ],
+)
+
+proto_library_with_info(
+    name = "kms_proto_with_info",
+    deps = [
+        ":kms_proto",
+        "@com_google_googleapis//google/cloud:common_resources_proto",
+        "@com_google_googleapis//google/iam/v1:iam_policy_proto",
+        "@com_google_googleapis//google/iam/v1:policy_proto",
+    ],
+)
+
+java_proto_library(
+    name = "kms_java_proto",
+    deps = [":kms_proto"],
+)
+
+java_grpc_library(
+    name = "kms_java_grpc",
+    srcs = [":kms_proto"],
+    deps = [":kms_java_proto"],
+)
+
+java_gapic_library(
+    name = "kms_java_gapic",
+    srcs = [":kms_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/cloud/kms/v1:cloudkms_grpc_service_config.json",
+    # For the IAM mixin.
+    service_yaml = "apis/kms/v1/cloudkms_test_mixins_v1.yaml",
+    test_deps = [
+        ":kms_java_grpc",
+        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
+    ],
+    deps = [
+        ":kms_java_proto",
         "@com_google_googleapis//google/iam/v1:iam_java_proto",
     ],
 )
