--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -5,12 +5,16 @@ load(
     "java_gapic_test",
     "java_grpc_library",
     "java_proto_library",
+    "proto_library_with_info",
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
     "golden_update",
     "integration_test",
 )
+
+# KMS (for mixins).
+load("@rules_proto//proto:defs.bzl", "proto_library")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -21,6 +25,7 @@ package(default_visibility = ["//visibility:public"])
 INTEGRATION_TEST_LIBRARIES = [
     "asset",  # Basic case.
     "credentials",  # Check that the capital name edge case is handled.
+    "iam",  # Mixin-only special-case API can build on its own.
     "kms",  # Mixins, with an override in the proto file.
     "logging",  # Java package remapping in gapic.yaml.
     "redis",  # Has a gapic.yaml.
@@ -31,6 +36,7 @@ INTEGRATION_TEST_LIBRARIES = [
 API_GAPIC_TARGETS = {
     "asset": "@com_google_googleapis//google/cloud/asset/v1:asset_java_gapic",
     "credentials": "@com_google_googleapis//google/iam/credentials/v1:credentials_java_gapic",
+    "iam": ":iam_java_gapic",  # Googleapis' LRO does not have a Java Gapic.
     "kms": ":kms_java_gapic",  # Local target because mixins are not rolled out yet.
     "logging": "@com_google_googleapis//google/logging/v2:logging_java_gapic",
     "redis": "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_gapic",
@@ -157,9 +163,35 @@ java_gapic_assembly_gradle_pkg(
     ],
 )
 
-# KMS (for mixins).
-load("@rules_proto//proto:defs.bzl", "proto_library")
-load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")
+# IAM (for a standalone mixed-in API).
+java_gapic_library(
+    name = "iam_java_gapic",
+    srcs = ["@com_google_googleapis//google/iam/v1:iam_proto_with_info"],
+    grpc_service_config = "iam_grpc_service_config.json",
+    test_deps = [
+        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
+    ],
+    deps = [
+        "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
+
+java_gapic_test(
+    name = "iam_java_gapic_test_suite",
+    test_classes = [
+        "com.google.iam.v1.IAMPolicyClientTest",
+    ],
+    runtime_deps = ["iam_java_gapic_test"],
+)
+
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-iam-java",
+    deps = [
+        ":iam_java_gapic",
+        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
+        "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
 
 proto_library(
     name = "kms_proto",
