--- a/gapic-generator-java/test/integration/apis/kms/v1/cloudkms_test_mixins_v1.yaml
+++ b/gapic-generator-java/test/integration/apis/kms/v1/cloudkms_test_mixins_v1.yaml
@@ -5,6 +5,7 @@ title: Cloud Key Management Service (KMS) API
 
 apis:
 - name: google.cloud.kms.v1.KeyManagementService
+- name: google.cloud.location.Locations
 - name: google.iam.v1.IAMPolicy
 
 types:
