--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -56,6 +56,24 @@ proto_library(
 )
 
 proto_library(
+    name = "deprecated_service_proto",
+    srcs = [
+        "deprecated_service.proto",
+    ],
+    deps = [
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/longrunning:operations_proto",
+        "@com_google_googleapis//google/rpc:error_details_proto",
+        "@com_google_googleapis//google/rpc:status_proto",
+        "@com_google_protobuf//:duration_proto",
+        "@com_google_protobuf//:empty_proto",
+    ],
+)
+
+proto_library(
     name = "testgapic_proto",
     srcs = [
         "bad_message_resname_def.proto",
@@ -75,6 +93,11 @@ proto_library(
         "@com_google_protobuf//:field_mask_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
+)
+
+java_proto_library(
+    name = "deprecated_service_java_proto",
+    deps = [":deprecated_service_proto"],
 )
 
 java_proto_library(
