--- a/api-common-java/.github/sync-repo-settings.yaml
+++ b/api-common-java/.github/sync-repo-settings.yaml
@@ -2,21 +2,30 @@ rebaseMergeAllowed: true
 squashMergeAllowed: true
 mergeCommitAllowed: false
 branchProtectionRules:
-- pattern: master
-  isAdminEnforced: true
-  requiredStatusCheckContexts:
-  - 'codecov/patch'
-  - 'codecov/project'
-  - 'cla/google'
-  requiredApprovingReviewCount: 1
-  requiresCodeOwnerReviews: true
-  requiresStrictStatusChecks: true
+  - pattern: master
+    isAdminEnforced: true
+    requiredStatusCheckContexts:
+      - codecov/patch
+      - codecov/project
+      - cla/google
+    requiredApprovingReviewCount: 1
+    requiresCodeOwnerReviews: true
+    requiresStrictStatusChecks: true
+  - pattern: 1.10.1-sp
+    isAdminEnforced: true
+    requiredStatusCheckContexts:
+      - codecov/patch
+      - codecov/project
+      - cla/google
+    requiredApprovingReviewCount: 1
+    requiresCodeOwnerReviews: true
+    requiresStrictStatusChecks: true
 permissionRules:
-- team: Googlers
-  permission: pull
-- team: yoshi-java
-  permission: push
-- team: yoshi-java-admins
-  permission: admin
-- team: yoshi-admins
-  permission: admin
+  - team: Googlers
+    permission: pull
+  - team: yoshi-java
+    permission: push
+  - team: yoshi-java-admins
+    permission: admin
+  - team: yoshi-admins
+    permission: admin
