--- a/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -23,6 +23,7 @@ java_library(
     deps = [
         "//:service_config_java_proto",
         "//src/main/java/com/google/api/generator/engine/ast",
+        "//src/main/java/com/google/api/generator/gapic/composer/grpc",
         "//src/main/java/com/google/api/generator/gapic/model",
         "//src/main/java/com/google/api/generator/gapic/utils",
         "@com_google_api_api_common//jar",
