--- a/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -16,6 +16,7 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/engine/writer",
     "//src/main/java/com/google/api/generator/gapic/composer",
     "//src/main/java/com/google/api/generator/gapic/composer/common",
+    "//src/main/java/com/google/api/generator/gapic/composer/grpc",
     "//src/test/java/com/google/api/generator/test/framework:asserts",
     "//src/test/java/com/google/api/generator/test/framework:utils",
     "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
