--- a/src/main/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -14,6 +14,7 @@ java_library(
     ],
     deps = [
         "//:service_config_java_proto",
+        "//src/main/java/com/google/api/generator:autovalue",
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic:status_java_proto",
@@ -27,10 +28,12 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "//src/main/java/com/google/api/generator/util",
         "@com_google_api_api_common//jar",
-        "@com_google_api_gax_java//gax:gax",
+        "@com_google_api_gax_java//gax",
         "@com_google_api_gax_java//gax:gax_testlib",
         "@com_google_api_gax_java//gax-grpc:gax_grpc",
         "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
+        "@com_google_auto_value_auto_value//jar",
+        "@com_google_auto_value_auto_value_annotations//jar",
         "@com_google_code_findbugs_jsr305//jar",
         "@com_google_googleapis//gapic/metadata:metadata_java_proto",
         "@com_google_googleapis//google/api:api_java_proto",
