--- a/dependencies.properties
+++ b/dependencies.properties
@@ -15,7 +15,7 @@ version.com_google_gax_java=1.62.0
 version.io_grpc_java=1.30.2
 
 # Common deps.
-maven.com_google_guava_guava=com.google.guava:guava:26.0-jre
+maven.com_google_guava_guava=com.google.guava:guava:30.1-android
 maven.com_google_code_findbugs_jsr305=com.google.code.findbugs:jsr305:3.0.0
 maven.com_google_auto_value_auto_value=com.google.auto.value:auto-value:1.7.2
 maven.com_google_auto_value_auto_value_annotations=com.google.auto.value:auto-value-annotations:1.7.2
